# ChangeLog for app-text/xpdf
# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-text/xpdf/ChangeLog,v 1.79 2005/05/21 20:29:01 lanius Exp $

  21 May 2005; Heinrich Wendel <lanius@gentoo.org> xpdf-3.00-r8.ebuild:
  add s390 keyword to make cups happy, this is fine since xpdf was previously
  merged inside of cups

  08 Mar 2005; Heinrich Wendel <lanius@gentoo.org> -xpdf-3.00-r5.ebuild:
  cleanups

  07 Feb 2005; Hardave Riar <hardave@gentoo.org> xpdf-3.00-r8.ebuild:
  Marked ~mips

  31 Jan 2005; Heinrich Wendel <lanius@gentoo.org> -xpdf-3.00-r6.ebuild,
  -xpdf-3.00-r7.ebuild:
  remove old versions, fix xpdf-latin2.tar.gz

  26 Jan 2005; Guy Martin <gmsoft@gentoo.org> xpdf-3.00-r8.ebuild:
  Stable on hppa.

  21 Jan 2005; Markus Rothe <corsair@gentoo.org> xpdf-3.00-r8.ebuild:
  Stable on ppc64; bug #77888

  20 Jan 2005; Bryan Østergaard <kloeri@gentoo.org> xpdf-3.00-r8.ebuild:
  Stable on alpha, bug 77888.

  19 Jan 2005; Michael Hanselmann <hansmi@gentoo.org> xpdf-3.00-r8.ebuild:
  Stable on ppc.

  19 Jan 2005; Karol Wojtaszek <sekretarz@gentoo.org> xpdf-3.00-r8.ebuild:
  Stable on amd64, bug #77888

  19 Jan 2005; Ferris McCormick <fmccor@gentoo.org> xpdf-3.00-r8.ebuild:
  Stable for sparc with respect to security bug 77888.

*xpdf-3.00-r8 (19 Jan 2005)

  19 Jan 2005; Heinrich Wendel <lanius@gentoo.org> +files/xpdf-3.00-pl3.patch,
  +xpdf-3.00-r8.ebuild:
  security bump; bug #77888

  28 Dec 2004; Guy Martin <gmsoft@gentoo.org> xpdf-3.00-r7.ebuild:
  Stable on hppa.

  27 Dec 2004; <SeJo@gentoo.org> xpdf-3.00-r7.ebuild:
  stable on ppc glsa: 75191

  27 Dec 2004; Bryan Østergaard <kloeri@gentoo.org> xpdf-3.00-r7.ebuild:
  Stable on alpha, bug 75191.

  25 Dec 2004; Markus Rothe <corsair@gentoo.org> xpdf-3.00-r7.ebuild:
  Stable on ppc64; bug #75191

  25 Dec 2004; Danny van Dyk <kugelfang@gentoo.org> xpdf-3.00-r7.ebuild:
  Marked stable on amd64.
