@@ -1,6 +1,6 @@
 # Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/xpdf/xpdf-3.00-r8.ebuild,v 1.11 2005/05/21 20:29:01 lanius Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/xpdf/xpdf-3.00-r8.ebuild,v 1.12 2005/05/23 15:52:50 lanius Exp $
 
 inherit eutils
 
@@ -22,9 +22,9 @@ SRC_URI="ftp://ftp.foolabs.com/pub/xpdf/${P}.tar.gz
 LICENSE="GPL-2"
 SLOT="0"
 KEYWORDS="alpha amd64 arm hppa ia64 ppc ppc64 sparc x86 ~mips ~s390"
-IUSE="nomotif nodrm"
+IUSE="motif nodrm"
 
-DEPEND="!nomotif? ( !s390? ( virtual/x11
+DEPEND="motif? ( !s390? ( virtual/x11
 	x11-libs/openmotif ) )
 	>=media-libs/freetype-2.0.5
 	>=media-libs/t1lib-1.3
